[package]
name = "pjyew"
version = "0.1.0"
authors = ["xn3cr0nx <patrick.jusic@protonmail.com>"]
edition = "2018"

categories = ["website", "wasm", "web-programming"]
description = "personal rust website"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/xn3cr0nx/pjyew"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.65"
yew = "0.17.2"
yew-router = "0.14.0"
yew-octicons = "0.1.1"
css-in-rust = { version = "^0.5.0", features = ["yew_integration"] }
web_logger = "0.2"